[package]
name = "am-parse"
version = "0.99.0"
authors = ["Daniil Novoselov <gudnmail@gmail.com>"]
edition = "2021"
license = "MIT"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
